Use more superscripts and fix the internal hyperlink reference.

--- a/tex/p191.tex
+++ b/tex/p191.tex
@@ -24,8 +24,8 @@
 \vs p191 2:2 When the morontia Jesus had spoken to them, he vanished in an instant from their sight. And they all fell on their faces, praising God and venerating their vanished Master. This was the Master’s 9\ts{th} morontia appearance.
 \usection{3.\bibnobreakspace With the Morontia Creatures}
 \vs p191 3:1 The next day, Monday, was spent wholly with the morontia creatures then present on Urantia. As participants in the Master’s morontia\hyp{}transition experience, there had come to Urantia more than 1,000,000 morontia directors and associates, together with transition mortals of various orders from the seven mansion worlds of Satania. The morontia Jesus sojourned with these splendid intelligences for 40 days. He instructed them and learned from their directors the life of morontia transition as it is traversed by the mortals of the inhabited worlds of Satania as they pass through the system morontia spheres.
-\vs p191 3:2 About midnight of this Monday the Master’s morontia form was adjusted for transition to the second stage of morontia progression. When he next appeared to his mortal children on earth, it was as a second\hyp{}stage morontia being. As the Master progressed in the morontia career, it became, technically, more and more difficult for the morontia intelligences and their transforming associates to visualize the Master to mortal and material eyes.
-\vs p191 3:3 Jesus made the transit to the third stage of morontia on Friday, April 14; to the fourth stage on Monday, the 17\ts{th}; to the fifth stage on Saturday, the 22\ts{nd}; to the sixth stage on Thursday, the 27\ts{th}; to the seventh stage on Tuesday, May 2; to Jerusem citizenship on Sunday, the 7\ts{th}; and he entered the embrace of the Most Highs of Edentia on Sunday, the 14\ts{th}\fnst{\textbf{the 14\ts{th}}, Note that if Jesus entered the embrace of the Most Highs on 14\ts{th} of May, then his 18\ts{th} and 19\ts{th} appearances could not have been in morontia form as stated in \bibref[193:2.1]{p192 2:1} and \bibref[193:5.1]{p193 5:1} respectively.}.
+\vs p191 3:2 About midnight of this Monday the Master’s morontia form was adjusted for transition to the 2\ts{nd} stage of morontia progression. When he next appeared to his mortal children on earth, it was as a 2\ts{nd}\hyp{}stage morontia being. As the Master progressed in the morontia career, it became, technically, more and more difficult for the morontia intelligences and their transforming associates to visualize the Master to mortal and material eyes.
+\vs p191 3:3 Jesus made the transit to the 3\ts{rd} stage of morontia on Friday, April 14; to the 4\ts{th} stage on Monday, the 17\ts{th}; to the 5\ts{th} stage on Saturday, the 22\ts{nd}; to the 6\ts{th} stage on Thursday, the 27\ts{th}; to the 7\ts{th} stage on Tuesday, May 2; to Jerusem citizenship on Sunday, the 7\ts{th}; and he entered the embrace of the Most Highs of Edentia on Sunday, the 14\ts{th}\fnst{\textbf{the 14\ts{th}}, Note that if Jesus entered the embrace of the Most Highs on 14\ts{th} of May, then his 18\ts{th} and 19\ts{th} appearances could not have been in morontia form as stated in \bibref[193:2.1]{p193 2:1} and \bibref[193:5.1]{p193 5:1} respectively.}.
 \vs p191 3:4 In this manner did Michael of Nebadon complete his service of universe experience since he had already, in connection with his previous bestowals, experienced to the full the life of the ascendant mortals of time and space from the sojourn on the headquarters of the constellation even on to, and through, the service of the headquarters of the superuniverse. And it was by these very morontia experiences that the Creator Son of Nebadon really finished and acceptably terminated his 7\ts{th} and final universe bestowal.
 \usection{4.\bibnobreakspace The Tenth Appearance (At Philadelphia)}
 \vs p191 4:1 The 10\ts{th} morontia manifestation of Jesus to mortal recognition occurred a short time after 8:00 on Tuesday, April 11, at Philadelphia, where he showed himself to Abner and Lazarus and some 150 of their associates, including more than 50 of the evangelistic corps of the 70. This appearance occurred just after the opening of a special meeting in the synagogue which had been called by Abner to discuss the crucifixion of Jesus and the more recent report of the resurrection which had been brought by David’s messenger. Inasmuch as the resurrected Lazarus was now a member of this group of believers, it was not difficult for them to believe the report that Jesus had risen from the dead.
