Put the epigraph on the title page in the shadow box.

--- a/ubook.sty
+++ b/ubook.sty
@@ -25,7 +25,9 @@
 \protected\def\hyph#1#2#3{\discretionary{#1\char\hyphenchar\font}{#2}{#3}}
 
 \RequirePackage[perpage]{footmisc}
-\RequirePackage{fancyhdr,color,etex,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,xcolor,pagecolor,afterpage,float,pifont}
+\RequirePackage{fancyhdr,color,etex,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,xcolor,pagecolor,afterpage,float,pifont,fancybox}
+
+\setlength{\fboxsep}{7pt}
 
 \newcommand{\bibdropcapscolor}{black}
 \newcommand{\bibtocfont}{\fontsize{11}{13.2}\selectfont}
