--- a/tex/title.tex
+++ b/tex/title.tex
@@ -68,7 +68,7 @@ Edited by Tigran Aivazian\\[2ex]
 
 \begin{center}
 \vspace*{\stretch{0.3}}
-\begin{center}\parbox{7cm}{\tunemarkuptwo{pgkindledx}{\Large}{\large}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}\end{center}
+\begin{center}\shadowbox{\strut\parbox{7cm}{\tunemarkuptwo{pgkindledx}{\Large}{\large}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
