--- a/tex/title.tex
+++ b/tex/title.tex
@@ -79,7 +79,7 @@ The text of the Urantia Papers is in the public domain}.\\[5pt]
 \tunemarkuptwo{coverimage}{Cover design by Gary Tonge, www.vision-afar.com.\\}{}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
-Please send all comments \&\ suggestions to {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
+Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\
 \tunemarkuptwo{nofnt}{}{The apparatus (marked with a circle in the text) contains all significant changes made since the 1955 first edition.\\}
 The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk * indicates a study note other than a textual variant.\\[5pt]}
 \tux\ Typeset with \XeLaTeX\ under Linux.\\
