--- a/ubook.sty
+++ b/ubook.sty
@@ -25,7 +25,7 @@
 \protected\def\hyph#1#2#3{\discretionary{#1\char\hyphenchar\font}{#2}{#3}}
 
 \RequirePackage[perpage]{footmisc}
-\RequirePackage{fancyhdr,color,etex,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,xcolor,pagecolor,afterpage,float,pifont,fancybox}
+\RequirePackage{fancyhdr,color,etex,multicol,amssymb,xltxtra,polyglossia,hyphenat,ulem,xcolor,pagecolor,afterpage,float,pifont,fancybox,pdfpages}
 
 \setlength{\fboxsep}{7pt}
 
