--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -829,7 +829,7 @@
 
 \newcommand{\hsetoff}{\hspace*{1em}}
 \newcommand{\vsetspace}{\vspace{1ex}}
-\newcommand{\bibcovertitlefont}{\parttitlefont\fontsize{18}{18}\selectfont\addfontfeature{LetterSpace=2.0}}
+\newcommand{\bibcovertitlefont}{\parttitlefont\fontsize{18}{18}\selectfont\addfontfeature{LetterSpace=4.5,WordSpace=1.0}}
 \protected\def\print@vssup#1{\makebox[0.2em][r]{\@textsuperscript{\headerfont\fontsize{8}{8}\selectfont#1}}\kern0.2em\relax}
 
 \tunemarkup{nofnt}{%
@@ -1022,7 +1022,7 @@
 
 \def\ackn{Acknowledgement}
 \def\continuedtxt{(continued)}
-\def\urantiabook{THE URANTIA PAPERS}
+\def\urantiapapers{THE URANTIA PAPERS}
 \def\papertxt{PAPER}
 \def\partitxt{PART I}
 \def\partiup{THE CENTRAL AND SUPERUNIVERSES}
