Add a note about Anastasia and the "hectare of land".

--- a/tex/p072.tex
+++ b/tex/p072.tex
@@ -28,7 +28,7 @@
 \vs p072 2:16 \ublistelem{3.}\bibnobreakspace \bibemph{Industrial courts ---} the jurisdictional tribunals vested with full authority for the settlement of all economic misunderstandings.
 \vs p072 2:17 \pc The federal supreme court does not pass upon socio\hyp{}economic cases except upon the \bibfrac{3}{4} vote of the 3\ts{rd} legislative branch of the national government, the house of elder statesmen. Otherwise, all decisions of the parental, educational, and industrial high courts are final.
 \usection{3.\bibnobreakspace The Home Life}
-\vs p072 3:1 On this continent it is against the law for two families to live under the same roof. And since group dwellings have been outlawed, most of the tenement type of buildings have been demolished. But the unmarried still live in clubs, hotels, and other group dwellings. The smallest homesite permitted must provide 4,600 m\ts{2} of land. All land and other property used for home purposes are free from taxation up to 10 times the minimum homesite allotment.
+\vs p072 3:1 On this continent it is against the law for two families to live under the same roof. And since group dwellings have been outlawed, most of the tenement type of buildings have been demolished. But the unmarried still live in clubs, hotels, and other group dwellings. The smallest homesite permitted must provide 4,600\,m\ts{2}\fnst{\textbf{4,600\,m\ts{2}}, This is, approximately, half a hectare. Note, that Anastasia (who appears to be one of the purest Adamites living at present) recommends that each family should own and cultivate a hectare of land as a way to save the civilization and enter the new age of enlarged spiritual vision and brotherhood of all mankind based on the fatherhood of God.} of land. All land and other property used for home purposes are free from taxation up to 10 times the minimum homesite allotment.
 \vs p072 3:2 The home life of this people has greatly improved during the last century. Attendance of parents, both fathers and mothers, at the parental schools of child culture is compulsory. Even the agriculturists who reside in small country settlements carry on this work by correspondence, going to the near\hyp{}by centres for oral instruction once in 10 days --- every two weeks, for they maintain a 5\hyp{}day week.
 \vs p072 3:3 The average number of children in each family is 5, and they are under the full control of their parents or, in case of the demise of one or both, under that of the guardians designated by the parental courts. It is considered a great honour for any family to be awarded the guardianship of a full orphan. Competitive examinations are held among parents, and the orphan is awarded to the home of those displaying the best parental qualifications.
 \vs p072 3:4 \pc These people regard the home as the basic institution of their civilization. It is expected that the most valuable part of a child’s education and character training will be secured from his parents and at home, and fathers devote almost as much attention to child culture as do mothers.
