The beginning of A4 page size support for printing

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -8,13 +8,14 @@
 \makeatother
 
 \begin{center}
-\LARGE\bfseries
+\LARGE\tunemarkup{pgafour}{\Huge}\bfseries
 INTRODUCTION
 \end{center}
 
 \tunemarkup{pghanlin}{\fontsize{16}{19}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{17.4}{19.5}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
+\tunemarkup{pgafour}{\fontsize{17}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{17}{21}\selectfont}
 
@@ -37,7 +38,7 @@ Many thanks to my friends Jim George and Mitch Austin for their helpful suggesti
 some of which have been incorporated into the study notes of the present edition.
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to consider to be my mentor and friend.
 
-\tunemarkuptwo{pgkindledx}{}{%
+\tunemarkuptwo{noquiz}{}{%
 This PDF file also includes the interactive quiz (\totalcurqs\ questions in total) called \bibemph{The Cosmic Citizenship Quiz}.
 To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper or click on the title of any Paper in the text section.
 Clicking on the Paper's title in the quiz section will return you back to that Paper in the text section.
