--- a/tex/title.tex
+++ b/tex/title.tex
@@ -13,18 +13,21 @@
 \begin{center}
 {
 \bibcovertitlefont
+\tunemarkup{pgafour}{\fontsize{27}{34}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{20.8}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
 THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
+\tunemarkup{pgafour}{\fontsize{24}{34}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{16.5}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
 {\itshape OF}\\
+\tunemarkup{pgafour}{\fontsize{32.5}{38}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{25}{32}\selectfont}
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{18}{20}\selectfont}
@@ -36,6 +39,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \vspace*{\stretch{0.1}}
 \tunemarkup{pghanlin}{\fontsize{10}{13}\selectfont}
 \tunemarkup{pgkindledx}{\fontsize{16}{18}\selectfont}
+\tunemarkup{pgafour}{\fontsize{21}{24}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{15}\selectfont}
 \itshape
@@ -63,11 +67,12 @@ Edited by Tigran Aivazian\\[2ex]
 
 \begin{center}
 \vspace*{\stretch{0.3}}
-\begin{center}\shadowbox{\strut\parbox{7cm}{\tunemarkuptwo{pgkindledx}{\Large}{\large}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
+\begin{center}\shadowbox{\strut\parbox{7cm}{\large\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgafour}{\LARGE}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
+\tunemarkup{pgafour}{\Large\itshape}
 \parbox{0.9\linewidth}{\centering
 \textbf{\upshape\nocopyright\ No copyright is claimed on this book\\
 The text of the Urantia Papers is in the public domain}.\\[5pt]
@@ -79,8 +84,8 @@ Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aiv
 The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk * indicates a study note other than a textual variant.\\[5pt]}
 \tux\ Typeset with \XeLaTeX\ under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
-\upshape\small\bfseries PDF version: \tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\\
-\upshape\small\bfseries PDF date: \mytoday{}\\
+\upshape\small\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\\
+\upshape\bfseries PDF date: \mytoday{}\\
 }
 \end{center}
 
