--- a/urantia-study-edition.tex
+++ b/urantia-study-edition.tex
@@ -13,6 +13,7 @@
 \tunemarkup{pgkoboaurahd}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkobomini}{\fancyhead[C]{\bibheadfont THE TITLES OF THE PAPERS}\bibtableofcontents{}}
 \tunemarkup{pgkindledx}{\include{tex/paper-titles}}
+\tunemarkup{pgafour}{\include{tex/paper-titles}}
 %\iftotalfigures\clp\listoffigures\clp\fi XXX doesn't work: disturbs all the headings for unknown reason!
 \tunemarkup{introinclude}{\include{tex/intro}}
 \include{tex/p000}
