Fix page colour background for the tablet build.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -9,8 +9,8 @@
 % various page sizes
 %\tunemarkuptag{pghanlin}
 %\tunemarkuptag{pgnexus7}
-%\tunemarkuptag{pgkoboaurahd}
-\tunemarkuptag{pgafour}
+\tunemarkuptag{pgkoboaurahd}
+%\tunemarkuptag{pgafour}
 %\tunemarkuptag{pgkindledx}
 %\tunemarkuptag{pgkobomini}
 
@@ -59,7 +59,7 @@
 %\tunemarkuptag{nofancydecor}
 
 % comment out to disable cover image
-%\tunemarkuptag{coverimage}
+\tunemarkuptag{coverimage}
 
 % comment out to enable Cosmic Citizenship Quiz
 \tunemarkuptag{noquiz}
@@ -941,8 +941,8 @@
 }
 
 \tunemarkup{pgnexus7}{%
-\definecolor{ubpagecolor}{rgb}{0.0, 0.5, 1.0}
-\definecolor{ubpagebg}{rgb}{1.0, 1.0, 0.9}
+\definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
+\definecolor{ubpagebg}{rgb}{1.0, 1.0, 0.7}
 \pagecolor{ubpagebg}
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
 \definecolor{ubdarkred}{rgb}{0.6, 0.0, 0.0}
