Enable the quiz by default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -62,7 +62,7 @@
 \tunemarkuptag{coverimage}
 
 % comment out to enable Cosmic Citizenship Quiz
-\tunemarkuptag{noquiz}
+%\tunemarkuptag{noquiz}
 
 \setdefaultlanguage{english}
 
