Adjust margins and other tidy ups for A4 build.

--- a/tex/p011.tex
+++ b/tex/p011.tex
@@ -42,7 +42,7 @@
 \vs p011 5:9 \pc All physical force, energy, and matter are one. All force\hyp{}energy originally proceeded from nether Paradise and will eventually return thereto following the completion of its space circuit. But the energies and material organizations of the universe of universes did not all come from nether Paradise in their present phenomenal states; space is the womb of several forms of matter and prematter. Though the outer zone of the Paradise force centre is the source of space\hyp{}energies, space does not originate there. Space is not force, energy, or power. Nor do the pulsations of this zone account for the respiration of space, but the incoming and outgoing phases of this zone are synchronized with the two\hyp{}billion\hyp{}year expansion\hyp{}contraction cycles of space.
 \usection{6.\bibnobreakspace Space Respiration}
 \vs p011 6:1 We do not know the actual mechanism of space respiration; we merely observe that all space alternately contracts and expands. This respiration affects both the horizontal extension of pervaded space and the vertical extensions of unpervaded space which exist in the vast space reservoirs above and below Paradise. In attempting to imagine the volume outlines of these space reservoirs, you might think of an hourglass.
-\vs p011 6:2 As the universes of the horizontal extension of pervaded space expand, the reservoirs of the vertical extension of unpervaded space contract and vice versa. There is a confluence of pervaded and unpervaded space just underneath nether Paradise. Both types of space there flow through the transmuting regulation channels, where changes are wrought making pervadable space nonpervadable and vice versa in the contraction and expansion cycles of the cosmos.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.35}\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/confluence_of_pervaded_and_unpervaded_space_700x525h.jpg}\caption{Confluence of Pervaded and Unpervaded Space by Troy~R.~Bishop}\end{figure}}
+\vs p011 6:2 As the universes of the horizontal extension of pervaded space expand, the reservoirs of the vertical extension of unpervaded space contract and vice versa. There is a confluence of pervaded and unpervaded space just underneath nether Paradise. Both types of space there flow through the transmuting regulation channels, where changes are wrought making pervadable space nonpervadable and vice versa in the contraction and expansion cycles of the cosmos.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgafour}{0.37}\tunemarkup{pgkobomini}{0.35}\tunemarkup{pgkoboaurahd}{0.4}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.27}]{../urantia-pictures/Troy-Bishop/confluence_of_pervaded_and_unpervaded_space_700x525h.jpg}\caption{Confluence of Pervaded and Unpervaded Space by Troy~R.~Bishop}\end{figure}}
 \vs p011 6:3 \pc “Unpervaded” space means: unpervaded by those forces, energies, powers, and presences known to exist in pervaded space. We do not know whether vertical (reservoir) space is destined always to function as the equipoise of horizontal (universe) space; we do not know whether there is a creative intent concerning unpervaded space; we really know very little about the space reservoirs, merely that they exist, and that they seem to counterbalance the space\hyp{}expansion\hyp{}contraction cycles of the universe of universes.
 \vs p011 6:4 \pc The cycles of space respiration extend in each phase for a little more than one billion Urantia years. During one phase the universes expand; during the next they contract. Pervaded space is now approaching the mid\hyp{}point of the expanding phase, while unpervaded space nears the mid\hyp{}point of the contracting phase, and we are informed that the outermost limits of both space extensions are, theoretically, now approximately equidistant from Paradise. The unpervaded\hyp{}space reservoirs now extend vertically above upper Paradise and below nether Paradise just as far as the pervaded space of the universe extends horizontally outward from peripheral Paradise to and even beyond the fourth outer space level.
 \vs p011 6:5 For a billion years of Urantia time the space reservoirs contract while the master universe and the force activities of all horizontal space expand. It thus requires a little over two billion Urantia years to complete the entire expansion\hyp{}contraction cycle.
