Automatically scale the width of pictures to the column width

--- a/tex/p014.tex
+++ b/tex/p014.tex
@@ -73,7 +73,7 @@
 \vs p014 5:7 Not until you traverse the last of the Havona circuits and visit the last of the Havona worlds, will the tonic of adventure and the stimulus of curiosity disappear from your career. And then will the urge, the forward impulse of eternity, replace its forerunner, the adventure lure of time.
 \vs p014 5:8 Monotony is indicative of immaturity of the creative imagination and inactivity of intellectual co\hyp{}ordination with the spiritual endowment. By the time an ascendant mortal begins the exploration of these heavenly worlds, he has already attained emotional, intellectual, and social, if not spiritual, maturity.
 \vs p014 5:9 Not only will you find undreamed\hyp{}of changes confronting you as you advance from circuit to circuit in Havona, but your astonishment will be inexpressible as you progress from planet to planet within each circuit. Each of these billion study worlds is a veritable university of surprises. Continuing astonishment, unending wonder, is the experience of those who traverse these circuits and tour these gigantic spheres. Monotony is not a part of the Havona career.
-\vs p014 5:10 Love of adventure, curiosity, and dread of monotony --- these traits inherent in evolving human nature --- were not put there just to aggravate and annoy you during your short sojourn on earth, but rather to suggest to you that death is only the beginning of an endless career of adventure, an everlasting life of anticipation, an eternal voyage of discovery.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgafour}{0.34}\tunemarkup{pgkobomini}{0.35}\tunemarkup{pgkoboaurahd}{0.39}\tunemarkup{pghanlin}{0.35}\tunemarkup{pgnexus7}{0.35}\tunemarkup{pgkindledx}{0.25}]{../urantia-pictures/Troy-Bishop/death_is_not_the_end_700x525h.jpg}\caption{Death Is Not The End by Troy~R.~Bishop}\end{figure}}
+\vs p014 5:10 Love of adventure, curiosity, and dread of monotony --- these traits inherent in evolving human nature --- were not put there just to aggravate and annoy you during your short sojourn on earth, but rather to suggest to you that death is only the beginning of an endless career of adventure, an everlasting life of anticipation, an eternal voyage of discovery.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Troy-Bishop/death_is_not_the_end_700x525h.jpg}\caption{Death Is Not The End by Troy~R.~Bishop}\end{figure}}
 \vs p014 5:11 Curiosity --- the spirit of investigation, the urge of discovery, the drive of exploration --- is a part of the inborn and divine endowment of evolutionary space creatures. These natural impulses were not given you merely to be frustrated and repressed. True, these ambitious urges must frequently be restrained during your short life on earth, disappointment must be often experienced, but they are to be fully realized and gloriously gratified during the long ages to come.
 \usection{6.\bibnobreakspace The Purpose of the Central Universe}
 \vs p014 6:1 The range of the activities of seven\hyp{}circuited Havona is enormous. In general, they may be described as:
