--- a/tex/p041.tex
+++ b/tex/p041.tex
@@ -75,7 +75,7 @@
 \vs p041 8:1 In those suns which are encircuited in the space\hyp{}energy channels, solar energy is liberated by various complex nuclear\hyp{}reaction chains, the most common of which is the hydrogen\hyp{}carbon\hyp{}helium reaction. In this metamorphosis, carbon acts as an energy catalyst since it is in no way actually changed by this process of converting hydrogen into helium. Under certain conditions of high temperature the hydrogen penetrates the carbon nuclei. Since the carbon cannot hold more than four such protons, when this saturation state is attained, it begins to emit protons as fast as new ones arrive. In this reaction the ingoing hydrogen particles come forth as a helium atom.
 \vs p041 8:2 \pc Reduction of hydrogen content increases the luminosity of a sun. In the suns destined to burn out, the height of luminosity is attained at the point of hydrogen exhaustion. Subsequent to this point, brilliance is maintained by the resultant process of gravity contraction. Eventually, such a star will become a so\hyp{}called white dwarf, a highly condensed sphere.
 \vs p041 8:3 \pc In large suns --- small circular nebulae --- when hydrogen is exhausted and gravity contraction ensues, if such a body is not sufficiently opaque to retain the internal pressure of support for the outer gas regions, then a sudden collapse occurs. The gravity\hyp{}electric changes give origin to vast quantities of tiny particles devoid of electric potential, and such particles readily escape from the solar interior, thus bringing about the collapse of a gigantic sun within a few days. It was such an emigration of these “runaway particles” that occasioned the collapse of the giant nova of the Andromeda nebula about 50 years ago. This vast stellar body collapsed in 40 minutes of Urantia time.
-\vs p041 8:4 As a rule, the vast extrusion of matter continues to exist about the residual cooling sun as extensive clouds of nebular gases. And all this explains the origin of many types of irregular nebulae, such as the Crab nebula, which had its origin about 900 years ago, and which still exhibits the mother sphere as a lone star near the centre of this irregular nebular mass.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[scale=\tunemarkup{pgkobomini}{0.76}\tunemarkup{pgkoboaurahd}{1.0}\tunemarkup{pghanlin}{0.52}\tunemarkup{pgnexus7}{0.88}\tunemarkup{pgkindledx}{0.65}]{images/crab.jpg}\caption{The Crab Nebula from VLT}\end{figure}}
+\vs p041 8:4 As a rule, the vast extrusion of matter continues to exist about the residual cooling sun as extensive clouds of nebular gases. And all this explains the origin of many types of irregular nebulae, such as the Crab nebula, which had its origin about 900 years ago, and which still exhibits the mother sphere as a lone star near the centre of this irregular nebular mass.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/crab.jpg}\caption{The Crab Nebula from VLT}\end{figure}}
 \usection{9.\bibnobreakspace Sun Stability}
 \vs p041 9:1 The larger suns maintain such a gravity control over their electrons that light escapes only with the aid of the powerful X\hyp{}rays. These helper rays penetrate all space and are concerned in the maintenance of the basic ultimatonic associations of energy. The great energy losses in the early days of a sun, subsequent to its attainment of maximum temperature --- upwards of 19,500,000\,°C --- are not so much due to light escape as to ultimatonic leakage. These ultimaton energies escape out into space, to engage in the adventure of electronic association and energy materialization, as a veritable energy blast during adolescent solar times.
 \vs p041 9:2 \pc Atoms and electrons are subject to gravity. The ultimatons are \bibemph{not} subject to local gravity, the interplay of material attraction, but they are fully obedient to absolute or Paradise gravity, to the trend, the swing, of the universal and eternal circle of the universe of universes. Ultimatonic energy does not obey the linear or direct gravity attraction of near\hyp{}by or remote material masses, but it does ever swing true to the circuit of the great ellipse of the far\hyp{}flung creation.
