Remove irrelevant note about Lucifer

--- a/tex/p004.tex
+++ b/tex/p004.tex
@@ -28,7 +28,7 @@
 \usection{3.\bibnobreakspace God’s Unchanging Character}
 \vs p004 3:1 All too long has man thought of God as one like himself. God is not, never was, and never will be jealous of man or any other being in the universe of universes. Knowing that the Creator Son intended man to be the masterpiece of the planetary creation, to be the ruler of all the earth, the sight of his being dominated by his own baser passions, the spectacle of his bowing down before idols of wood, stone, gold, and selfish ambition --- these sordid scenes stir God and his Sons to be jealous \bibemph{for} man, but never of him.
 \vs p004 3:2 The eternal God is incapable of wrath and anger in the sense of these human emotions and as man understands such reactions. These sentiments are mean and despicable; they are hardly worthy of being called human, much less divine; and such attitudes are utterly foreign to the perfect nature and gracious character of the Universal Father.
-\vs p004 3:3 \pc Much, very much, of the difficulty which Urantia mortals have in understanding God is due to the far\hyp{}reaching consequences of the Lucifer\fnst{\textbf{Lucifer}, Normally, the Urantia Papers coin new words to designate some personality (such as Caligastia below), unless the personality is already accurately identified in the existing human records, e.g. the Bible. This is the case here, i.e. this Lucifer is none other than the ``son of the morning'' who is ``fallen from heaven'' and ``cut down to the ground'' of Isaiah 14:12.} rebellion and the Caligastia\fnst{\textbf{Caligastia}, is a coined word from the Latin verb \textit{caligo} ``to be in darkness, waste away'', resulting in the total meaning of ``the one who is in total darkness''.} betrayal. On worlds not segregated by sin, the evolutionary races are able to formulate far better ideas of the Universal Father; they suffer less from confusion, distortion, and perversion of concept.
+\vs p004 3:3 \pc Much, very much, of the difficulty which Urantia mortals have in understanding God is due to the far\hyp{}reaching consequences of the Lucifer rebellion and the Caligastia\fnst{\textbf{Caligastia}, is a coined word from the Latin verb \textit{caligo} ``to be in darkness, waste away'', resulting in the total meaning of ``the one who is in total darkness''.} betrayal. On worlds not segregated by sin, the evolutionary races are able to formulate far better ideas of the Universal Father; they suffer less from confusion, distortion, and perversion of concept.
 \vs p004 3:4 \pc God repents of nothing he has ever done, now does, or ever will do. He is all\hyp{}wise as well as all\hyp{}powerful. Man’s wisdom grows out of the trials and errors of human experience; God’s wisdom consists in the unqualified perfection of his infinite universe insight, and this divine foreknowledge effectively directs the creative free will.
 \vs p004 3:5 The Universal Father never does anything that causes subsequent sorrow or regret, but the will creatures of the planning and making of his Creator personalities in the outlying universes, by their unfortunate choosing, sometimes occasion emotions of divine sorrow in the personalities of their Creator parents. But though the Father neither makes mistakes, harbours regrets, nor experiences sorrows, he is a being with a father’s affection, and his heart is undoubtedly grieved when his children fail to attain the spiritual levels they are capable of reaching with the assistance which has been so freely provided by the spiritual\hyp{}attainment plans and the mortal\hyp{}ascension policies of the universes.
 \vs p004 3:6 The infinite goodness of the Father is beyond the comprehension of the finite mind of time; hence must there always be afforded a contrast with comparative evil (not sin) for the effective exhibition of all phases of relative goodness. Perfection of divine goodness can be discerned by mortal imperfection of insight only because it stands in contrastive association with relative imperfection in the relationships of time and matter in the motions of space.
